--- a/css/style.css
+++ b/css/style.css
@@ -10,23 +10,41 @@ html{
 }
 
 body {
-  background: #151515 url('../images/tokyo-origin.jpg') no-repeat fixed center top;
+  background: #151515 url('../images/xmas.jpg') no-repeat fixed center top;
   background-size: cover;
+  margin: 0;
   color: #fff;
   text-align: center;
   font-size: 1.4rem;
-  font-family: Judson, "M PLUS 1p", "Hiragino Kaku Gothic ProN",  Meiryo, sans-serif;
+  font-family: 'Noto Serif JP', serif;
+}
+
+body::before{
+	/* 透過した黒を重ねる */
+	background-color: rgba(0,0,0,0.5);
+	/* どの範囲に重ねるかを指定 */
+	position: fixed;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	content: '';
+  z-index: -10;
+}
+
+section{
+  padding: 0 2rem;
 }
 
 /************** ローディング **********/
-#is-loading {
+#loading_body {
  display: block;
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0px;
  left: 0px;
- background: #1c1c1c;
+ background: #000000;
  z-index: 8;
 }
 #loading {
@@ -46,10 +64,9 @@ body {
 }
 
 /*************** header ************/
-.header{
-  padding: 220px 30px 220px;
+header{
+  padding-top: 15rem;
 }
-
 .site-title-sub{
   margin:0 0 30px;
   letter-spacing: 1px;
@@ -66,7 +83,7 @@ body {
   vertical-align: middle;
 }
 .site-title{
-  margin: 50px 0 40px;
+  margin: 4rem 0;
   font-size: 5rem;
   letter-spacing: 2px;
   display: none;
@@ -147,26 +164,19 @@ body {
 
 
 /*************** profile ************/
-.profile {
-  margin: 0 0 10rem 5rem;
-  padding:80px 30px;
-  background: #1c1c1c;
+.first-section {
   color: #fff;
+  padding-top: 10rem;
 }
 .heading {
   font-size: 7rem;
 }
-.profile-text{
-  margin:30px 0;
+.first-section .description{
   line-height: 3rem;
 }
 
 /*************** works ************/
-.works{
-  margin:0 5rem 10rem 0;
-  background-color: #1c1c1c;
-  padding: 80px 0;
-}
+
 .workText{
     line-height: 3rem;
 }
@@ -476,30 +486,6 @@ body {
 
 
 /* スライド */
-.scroll-wrap{
-  position: relative;
-  overflow: hidden;
-  width: 100%;
-  margin: 0 auto;
-}
-
-.slideConts {
-  -webkit-transition: 2s;
-  -o-transition: 2s;
-  transition: 2s;
-}
-.slideContsL {
-  transform: translate(-1500px, 0);
-}
-.slideContsR {
-  transform: translate(1500px, 0);
-}
-.slideContsL.show {
-  transform: translate(-50px, 0);
-}
-.slideContsR.show {
-  transform: translate(50px, 0);
-}
 
 
 /************************ メディアクエリ ***************/
@@ -623,23 +609,6 @@ body {
 
   .site-description{
     opacity: 0.8;
-  }
-
-  .profile{
-    text-align: left;
-    margin: 0 0 10rem 1rem;
-  }
-  .works{
-    margin: 0 1rem 10rem 0;
-  }
-  .skills{
-    margin: 0 0 10rem 1rem;
-  }
-  .slideContsR.show{
-    transform: translate(2rem,0);
-  }
-  .slideContsL.show{
-    transform: translate(-2rem,0);
   }
 
   .contact form{
