--- a/css/style.css
+++ b/css/style.css
@@ -163,16 +163,50 @@ header{
 }
 
 
-/*************** profile ************/
+/*************** first ************/
 .first-section {
   color: #fff;
   padding-top: 10rem;
 }
-.heading {
-  font-size: 7rem;
+.first-section .site-title-sub {
+  font-size: 3rem;
 }
 .first-section .description{
-  line-height: 3rem;
+  line-height: 4.5rem;
+  padding: 4rem;
+  font-size: 1.8rem;
+  color: rgba(255,255,255,0.7);
+}
+
+/*************** second ************/
+.second-section {
+  color: #fff;
+  padding-top: 10rem;
+}
+.second-section .site-title-sub {
+  font-size: 3rem;
+  margin: auto;
+  padding-bottom: 5rem;
+}
+.second-section .description{
+  line-height: 4.5rem;
+  padding: 4rem;
+  font-size: 1.8rem;
+  color: rgba(255,255,255,0.7);
+}
+.video{
+margin: auto;
+width:80%;
+padding-bottom: 45%;
+height:0px;
+position: relative;
+}
+.video iframe{
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
 }
 
 /*************** works ************/
@@ -408,7 +442,8 @@ header{
 }
 
 .footer{
-  padding: 12px 0;
+  background-color: rgba(0,0,0,0.8);
+  padding: 3rem 0 1.2rem;
   font-size: 1.3rem;
 }
 
@@ -582,10 +617,20 @@ header{
   .contact{padding-bottom: 80px}
 }
 
+@media (min-width: 425px) {
+  .br-sp{
+    display: none;
+  }
+}
+
 @media (max-width: 424px) {
   #loading {
    font-size: 2rem;
    top: 30%;
+  }
+
+  .br-pc{
+    display: none;
   }
 
   /* iphoneはこうやらないposition:coverが効かない！ */
@@ -602,9 +647,23 @@ header{
   z-index:-1;
   width:100%;
   height:100vh;
-  background:url('../images/tokyo2_revised.jpg') center no-repeat;
+  background:url('../images/xmas_sp.jpg') center no-repeat;
   background-size:cover;
   }
+
+  section{
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+
+  .first-section .description, .second-section .description{
+    text-align: left;
+    line-height: 3rem;
+    padding: 0
+  }
+
+  .h2 {font-size: 1rem;}
+  .site-title-sub{font-size: 1rem,}
 
 
   .site-description{
