--- a/css/style.css
+++ b/css/style.css
@@ -563,7 +563,8 @@ height: 100%;
     margin-top: 35px
   }
   .header{
-    padding-top: 60px
+    padding: 6rem 3rem;
+
   }
   .button:hover{
     opacity: 1;
