--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,68 @@ section{
  z-index: 9;
 }
 
+.sk-cube-grid {
+  width: 40px;
+  height: 40px;
+  margin: 20px auto;
+}
+
+.sk-cube-grid .sk-cube {
+  width: 33%;
+  height: 33%;
+  background-color: white;
+  float: left;
+  -webkit-animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
+          animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
+}
+.sk-cube-grid .sk-cube1 {
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s; }
+.sk-cube-grid .sk-cube2 {
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s; }
+.sk-cube-grid .sk-cube3 {
+  -webkit-animation-delay: 0.4s;
+          animation-delay: 0.4s; }
+.sk-cube-grid .sk-cube4 {
+  -webkit-animation-delay: 0.1s;
+          animation-delay: 0.1s; }
+.sk-cube-grid .sk-cube5 {
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s; }
+.sk-cube-grid .sk-cube6 {
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s; }
+.sk-cube-grid .sk-cube7 {
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s; }
+.sk-cube-grid .sk-cube8 {
+  -webkit-animation-delay: 0.1s;
+          animation-delay: 0.1s; }
+.sk-cube-grid .sk-cube9 {
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s; }
+
+@-webkit-keyframes sk-cubeGridScaleDelay {
+  0%, 70%, 100% {
+    -webkit-transform: scale3D(1, 1, 1);
+            transform: scale3D(1, 1, 1);
+  } 35% {
+    -webkit-transform: scale3D(0, 0, 1);
+            transform: scale3D(0, 0, 1);
+  }
+}
+
+@keyframes sk-cubeGridScaleDelay {
+  0%, 70%, 100% {
+    -webkit-transform: scale3D(1, 1, 1);
+            transform: scale3D(1, 1, 1);
+  } 35% {
+    -webkit-transform: scale3D(0, 0, 1);
+            transform: scale3D(0, 0, 1);
+  }
+}
+
 /*************** header ************/
 header{
   padding-top: 15rem;
@@ -212,6 +274,21 @@ width: 100%;
 height: 100%;
 }
 
+/********* third section **********/
+.flex-support{
+  display: flex;
+  width: 80%;
+  margin: auto;
+  margin-bottom: 10rem;
+  align-items: baseline;
+  justify-content: space-around;
+}
+.f-item1, .f-item2, .f-item3{
+  width: 20%;
+  height: auto;
+}
+.f-item2{width: 30%}
+
 /*************** works ************/
 
 .workText{
@@ -318,54 +395,6 @@ height: 100%;
 
 
 
-
-
-/*************** skills ************/
-
-
-.skills{
-  margin: 5rem 0 5rem 5rem;
-  background-color: #1c1c1c;
-  padding: 80px 0;
-  color: #fff
-}
-.skills-wrapper{
-  display: table;
-  width: 80%;
-  margin: 50px auto 0;
-  table-layout: fixed;
-}
-.skill-box{
-  display: table-cell;
-}
-.skill-icon{
-  width: 150px;
-  height: 150px;
-  margin-bottom: 30px;
-  border: 2px solid;
-  border-radius: 50%;
-  color: #fffd99;
-  font-size: 8rem;
-  line-height: 142px;
-}
-.skill-title{
-  margin: 0 20px 20px;
-  font-size: 2rem;
-  position: relative;
-}
-.skill-text{
-  margin: 0 20px;
-  line-height: 2;
-}
-.skill-title::after{
-  content:"";
-  border-bottom: 1px solid #fff;
-  position: absolute;
-  right: 3rem;
-  bottom: 0;
-  left: 3rem;
-
-}
 
 
 
@@ -686,6 +715,28 @@ height: 100%;
   width: 100%;
   height: 100%;
   }
+  .flex-support{
+    width: 90%;
+    margin-bottom: 5rem;
+    flex-direction: column;
+  }
+  .f-item1, .f-item2, .f-item3{
+    width: 100%;
+    height: auto;
+    margin: auto;
+    margin-bottom: 5rem;
+  }
+  .f-item1{
+    order: 2;
+    width: 80%;
+  }
+  .f-item2{order: 1}
+  .f-item3{
+    order: 3;
+    width: 80%;
+  }
+
+
 
   .contact form{
     display: none;
